Version 0.4.4
* Czech and Lithuanian translation update
* fix screen initialization with multiple Xserver layout configurations
* add experimental webcam filter dialog

Version 0.4.3
* fixed filter sort model

Version 0.4.2
* add Extension Manager
* fix brocken icons from newer oxygen icon theme
* add workaround to deprecated ffmpeg functions
* some CMakeLists.txt fixes
* add explicit -DENABLE_DRAWTEXT_FILTER:BOOL=ON some distributions e.g. kubuntu didn't compile FFmpeg with libfreetype support :-/
* add mutexes for QProccess
* fixed if no bookmark file exists create a dummy file for io/open
* fixed navigation widget dragging behavior

Version 0.4.0
* add ffpreset editor
* add configuration dialog
* add more context actions
* fix invalid item delegation
* new rubberband behavior
* fixed rubberband behavior with Xinerama

Version 0.3.0
* fix application crash when open pulsedialog and no pulseserver exists
* removed kde4 support - is now optional
* add bookmark functions
* add add table editor model and item delegation

Version 0.2.3.rc1
* add kde4 support - this can be explicit disabled with cmake -ddisable_kde_support:bool=on
* add customized codec selection
* add refresh logfile
* add drag and drop support for command line preview

Version 0.2.2
* fix move settings (windowpos/windowsize and windowstate) in a separate category to fix qmainwindow invalid loader behavior
* add support for audio/video codec selection with libavformat and libavcodec
* new rubberband style

Version 0.2.1
* ffmpeg Version lower then year 2010 now longer supported
* done add new configuration dialog
* fix video and options sorting now ordered by tables
* fix fix crash if empty items in configuration tables