@@ -1,0 +1,10 @@
+ </div>
+
+ <div id="footer">
+   Generated on $datetime for $projectname by&#160;<a href="http://www.doxygen.org/index.html">doxygen</a> $doxygenversion
+ </div>
+
+</div>
+
+</body>
+</html>
