@@ -1,0 +1,26 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
+<head profile="http://dublincore.org/documents/dcq-html/">
+  <!--BEGIN PROJECT_NAME--><title>$projectname: $title API</title><!--END PROJECT_NAME-->
+  <!--BEGIN !PROJECT_NAME--><title>$title API</title><!--END !PROJECT_NAME-->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
+  <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
+  <meta name="DC.Title" xml:lang="en" content="QX11Grab - API" />
+  <meta name="DC.Subject" xml:lang="en" content="X11 Desktop Recording" />
+  <meta name="DC.Creator" content="Heinemann Juergen  (Undefined)" />
+  <meta name="DC.Coverage" content="Rheinland Pfalz/Germany" scheme="DCTERMS.TGN" />
+  <meta name="DC.Format" content="text/html; charset=utf-8" scheme="DCTERMS.IMT" />
+  <meta name="DC.Language" content="en" scheme="DCTERMS.RFC3066" />
+  <meta name="DC.Rights" content="1996-2012 Domain HJCMS, Document Contents and CMS by Jürgen Heinemann All Rights Reserved" />
+  <meta name="robots" content="index,follow" />
+  <meta name="revisit-after" content="5 days" />
+  <link href="$relpath$doxygen.css" rel="stylesheet" type="text/css" />
+  <link href="$relpath$tabs.css" rel="stylesheet" type="text/css" />
+</head>
+
+<div id="container">
+<div id="body">
+<div>
